--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: ruby
 rvm:
   - 2.4.1
+  
+language: node_js
+after_success:
+  - cd ./_site && find . -type f -exec curl -u $FTP_USER:$FTP_PASS --ftp-create-dirs -T {} ftp://$FTP_HOST/www/subdom/jekyll/{} \;
