--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ script:
 
 
 after_success:
-  - cd ./_site && find . -type f -exec curl -u $FTP_USER:$FTP_PASS --ftp-create-dirs -T {} ftp://$FTP_HOST/www/subdom/jekyll/{} \;
+  - cd ./_site && find . -type f -exec curl -u $FTP_USER:$FTP_PASS -k --ftp-ssl --ftp-create-dirs -T {} ftp://$FTP_HOST/www/subdom/jekyll/{} \;
