--- a/.drone.yml
+++ b/.drone.yml
@@ -1,13 +1,17 @@
-pipeline:
-  build:
-    image: ruby
-    commands:
+kind: pipeline
+name: default
+
+steps:
+- name: build
+  image: ruby
+  commands:
       - gem install bundler
       - bundle install
       - bundle exec jekyll build
-
-  deploy:
-    image: cschlosser/drone-ftps
+	  
+- name: deploy
+  image: cschlosser/drone-ftps
+  settings:
     hostname: 57562.w62.wedos.net:21
     secrets: [ ftp_username, ftp_password ]
     secure: true
