--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ menu:
       - title: 'Výsledky'
         url: '/vysledky/'
       - title: 'Photo contest'
-        url: '/photo-contest/'  
+        url: '/photo-contest/'
   - title: 'Historie'
     url: '/historie/'
   - title: 'Odkazy'
@@ -74,7 +74,7 @@ social:
     url: "https://www.instagram.com/spintopcz/"
 
 # Background image to be tiled on all pages
-background: 
+background:
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: UA-48587462-1
@@ -114,5 +114,6 @@ titlecase: true
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
-plugins: [jekyll-paginate]
-theme: neo-hpstr-jekyll-theme
+plugins: [jekyll-paginate, jekyll-remote-theme]
+remote_theme: nrbrd/neo-hpstr-jekyll-theme
+#theme: neo-hpstr-jekyll-theme
